--- a/school_apk/pubspec.yaml
+++ b/school_apk/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   shared_preferences: ^2.3.2
   intl: ^0.19.0
   flutter_html: ^3.0.0-beta.2
+  flutter_tts: ^3.8.3
   google_fonts: ^6.2.1
 
 dev_dependencies:
