--- a/school_apk/pubspec.yaml
+++ b/school_apk/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   flutter_html_table: ^3.0.0-beta.2
   flutter_tts: ^3.8.3
   google_fonts: ^6.2.1
+  image_picker: ^1.0.7
 
 dev_dependencies:
   flutter_test:
