--- a/school_apk/pubspec.yaml
+++ b/school_apk/pubspec.yaml
@@ -41,6 +41,10 @@ dependencies:
   flutter_tts: ^3.8.3
   google_fonts: ^6.2.1
   image_picker: ^1.0.7
+  video_player: ^2.8.2
+  chewie: ^1.7.4
+  url_launcher: ^6.2.5
+  cached_network_image: ^3.3.1
 
 dev_dependencies:
   flutter_test:
