--- a/school_apk/pubspec.yaml
+++ b/school_apk/pubspec.yaml
@@ -45,6 +45,7 @@ dependencies:
   chewie: ^1.7.4
   url_launcher: ^6.2.5
   cached_network_image: ^3.3.1
+  syncfusion_flutter_pdfviewer: ^31.1.19
 
 dev_dependencies:
   flutter_test:
